--- a/src/index.html
+++ b/src/index.html
@@ -323,25 +323,31 @@
       <div class="title special-guest-title"></div>
       <p class="leading">邀请业内知名人士担任嘉宾，以主题演讲结合沙龙讨论以及设计分享等方式，和大家共同探讨如何用设计提升用户体验。</p>
       <div class="guest-wrap">
-        <div class="guest">
+        <div class="guest guest-1">
           <div class="mask">
             <div class="name">Willy Lai</div>
             <div class="intro">三星使用者体验创新中心总监</div>
           </div>
         </div>
-        <div class="guest">
+        <div class="guest guest-2">
           <div class="mask">
             <div class="name">Willy Lai</div>
             <div class="intro">三星使用者体验创新中心总监</div>
           </div>
         </div>
-        <div class="guest">
+        <div class="guest guest-3">
           <div class="mask">
             <div class="name">Willy Lai</div>
             <div class="intro">三星使用者体验创新中心总监</div>
           </div>
         </div>
-        <div class="guest">
+        <div class="guest guest-4">
+          <div class="mask">
+            <div class="name">Willy Lai</div>
+            <div class="intro">三星使用者体验创新中心总监</div>
+          </div>
+        </div>
+        <div class="guest guest-5">
           <div class="mask">
             <div class="name">Willy Lai</div>
             <div class="intro">三星使用者体验创新中心总监</div>
@@ -435,58 +441,58 @@
     <div class="container">
       <div class="title partner-title"></div>
       <div class="partner-wrap">
-        <a class="partner-logo" href="#">
+        <div class="partner-logo">
           <img src="imgs/partner/logo-i-alibaba-com.png" height="50" width="120" alt="">
-        </a>
-        <a class="partner-logo" href="#">
+        </div>
+        <div class="partner-logo">
           <img src="imgs/partner/logo-i-aliyun.png" height="50" width="120" alt="">
-        </a>
-        <a class="partner-logo" href="#">
+        </div>
+        <div class="partner-logo">
           <img src="imgs/partner/logo-i-aliyun-ued.png" height="50" width="120" alt="">
-        </a>
-        <a class="partner-logo" href="#">
+        </div>
+        <div class="partner-logo">
           <img src="imgs/partner/logo-i-juhuasuan.png" height="50" width="120" alt="">
-        </a>
-        <a class="partner-logo" href="#">
+        </div>
+        <div class="partner-logo">
           <img src="imgs/partner/logo-i-juhuasuan-UED.png" height="50" width="120" alt="">
-        </a>
-        <a class="partner-logo" href="#">
+        </div>
+        <div class="partner-logo">
           <img src="imgs/partner/logo-i-mobile-ux.png" height="50" width="120" alt="">
-        </a>
-        <a class="partner-logo" href="#">
+        </div>
+        <div class="partner-logo">
           <img src="imgs/partner/logo-i-mux.png" height="50" width="120" alt="">
-        </a>
+        </div>
       </div>
       <div class="partner-wrap">
-        <a class="partner-logo" href="#">
+        <div class="partner-logo">
           <img src="imgs/partner/logo-i-mux-1688.png" height="50" width="120" alt="">
-        </a>
-        <a class="partner-logo" href="#">
+        </div>
+        <div class="partner-logo">
           <img src="imgs/partner/logo-i-tmall.png" height="50" width="120" alt="">
-        </a>
-        <a class="partner-logo" href="#">
+        </div>
+        <div class="partner-logo">
           <img src="imgs/partner/logo-i-tmall-ued.png" height="50" width="120" alt="">
-        </a>
-        <a class="partner-logo" href="#">
+        </div>
+        <div class="partner-logo">
           <img src="imgs/partner/logo-i-youyidian.png" height="50" width="120" alt="">
-        </a>
-        <a class="partner-logo" href="#">
+        </div>
+        <div class="partner-logo">
           <img src="imgs/partner/logo-e-104bank.png" height="50" width="120" alt="">
-        </a>
-        <a class="partner-logo" href="#">
+        </div>
+        <div class="partner-logo">
           <img src="imgs/partner/logo-e-DITL.png" height="50" width="120" alt="">
-        </a>
-        <a class="partner-logo" href="#">
+        </div>
+        <div class="partner-logo">
           <img src="imgs/partner/logo-e-liontravel.png" height="50" width="120" alt="">
-        </a>
+        </div>
       </div>
       <div class="partner-wrap">
-        <a href="" class="partner-logo">
+        <div class="partner-logo">
           <img src="imgs/partner/logo-e-Samsung.png" height="50" width="120" alt="">
-        </a>
-        <a href="" class="partner-logo">
+        </div>
+        <div class="partner-logo">
           <img src="imgs/partner/logo-e-userxper.png" height="50" width="120" alt="">
-        </a>
+        </div>
       </div>
     </div>
 
