--- a/src/index.html
+++ b/src/index.html
@@ -106,7 +106,7 @@
             <div class="time">13:30-15:00</div>
             <div class="tl-dot"></div>
             <a class="topic-mod modal-trigger" data-modal="popup" href="#popup" data-id="0309003">
-              <span class="topic">服务设计</span>
+              <span class="topic">服务设计，重新设计服务产业</span>
               <span class="name">尹晟源（韩国）</span>
             </a>
           </div>
@@ -505,7 +505,7 @@
   <div class="modal-dialog" id="popup">
     <a href="#" class="jqmClose iconfont icon-close"></a>
     <div class="modal-header">
-      <img src="" alt="guest-photo" width="111" height="111" class="photo">
+      <img src="http://gtms02.alicdn.com/tps/i2/TB1.k4EHpXXXXaYXpXXm9tBMpXX-260-260.jpg" alt="guest-photo" width="111" height="111" class="photo">
       <div class="name">获取中……</div>
       <div class="title">获取中……</div>
     </div>
