更新嘉宾说明

--- a/src/index.html
+++ b/src/index.html
@@ -325,14 +325,14 @@
       <div class="guest-wrap">
         <div class="guest guest-1">
           <div class="mask">
-            <div class="name">Willy Lai</div>
-            <div class="intro">三星使用者体验创新中心总监</div>
+            <div class="name">James Landay</div>
+            <div class="intro">斯坦福大学计算机科学教授</div>
           </div>
         </div>
         <div class="guest guest-2">
           <div class="mask">
-            <div class="name">Willy Lai</div>
-            <div class="intro">三星使用者体验创新中心总监</div>
+            <div class="name">唐沐</div>
+            <div class="intro">小米路由器事业部 总经理</div>
           </div>
         </div>
         <div class="guest guest-3">
@@ -343,14 +343,14 @@
         </div>
         <div class="guest guest-4">
           <div class="mask">
-            <div class="name">Willy Lai</div>
-            <div class="intro">三星使用者体验创新中心总监</div>
+            <div class="name">徐迎庆</div>
+            <div class="intro">清华大学信息艺术设计系主任</div>
           </div>
         </div>
         <div class="guest guest-5">
           <div class="mask">
-            <div class="name">Willy Lai</div>
-            <div class="intro">三星使用者体验创新中心总监</div>
+            <div class="name">尹晟源</div>
+            <div class="intro">韩国设计振兴院 地区服务发展团队 负责人</div>
           </div>
         </div>
       </div>
