--- a/src/index.html
+++ b/src/index.html
@@ -350,7 +350,7 @@
         <div class="guest guest-5">
           <div class="mask">
             <div class="name">尹晟源</div>
-            <div class="intro">韩国设计振兴院 地区服务发展团队 负责人</div>
+            <div class="intro">韩国设计振兴院负责人</div>
           </div>
         </div>
       </div>
